# Aegis

./: .aegis_workdir  .dockerignore  .gitignore  DOCS_CHECKLIST.md  Dockerfile  LAUNCH_CHECKLIST.md  LICENSE  Makefile  NEXT_VERSION_BACKLOG.md  NOTICE  PROD_README.md  README.md  aegis_comprehensive_testing.sh  attack_metrics_local.csv  benchmark_dp_tradeoff.py  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml
aegis/: __init__.py  api.py  cli.py  dashboard.py  data_validation.py  federated_coordinator.py  flower_integration.py  privacy_engine.py  server.py
aegis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
benchmarks/: benchmark_report_runtime.py  benchmark_training_speed.py  generate_attack_metrics.py
deploy/: Dockerfile  docker-compose.demo.yml  docker-compose.oidc-test.yml  docker-compose.oidc.yml  docker-compose.yml  validate_k8s.sh
docs/: index.md
examples/: pytorch_opacus_demo.py  sklearn_demo.py  tensorflow_demo.py
k8s/: deployment.yaml
scripts/: demo_load.sh  healthcare_demo.sh  healthcare_tune_dp.sh
test_artifacts/: report_final_run.md  report_gdpr_run_1757775355.md  report_hipaa_run_1757752045.md  report_hipaa_run_1757775225.md  report_pci_203642.md  report_pci_run_1757775283.md  report_run1.md
test_results/: SUMMARY.md  summary.csv
tests/: __init__.py  test_api_mtls.py  test_api_security.py  test_attack_membership_inference.py  test_attack_model_inversion.py  test_cli.py  test_compliance_pdf.py  test_compliance_report_markdown.py  test_dp_engine.py  (+4 more)
(+104 files in other folders)
